renamed banking_sys to ATM

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 slash_dot_dash/__pycache__
 slash_dot_dash/.encoder.py.swp
-banking_system/balance.txt
-banking_system/banksys
+ATM/balance.txt
+ATM/banksys
